--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -1,4 +1,4 @@
-.countDownContainer {
+.countdownContainer {
   display: flex;
   align-items: center;
   font-family: Rajdhani;
@@ -6,7 +6,7 @@
   color: var(--title);
 }
 
-.countDownContainer > div {
+.countdownContainer > div {
   flex: 1;
 
   display: flex;
@@ -20,24 +20,24 @@
   text-align: center;
 }
 
-.countDownContainer > div span {
+.countdownContainer > div span {
   flex: 1;
 }
 
-.countDownContainer > div span:first-child {
+.countdownContainer > div span:first-child {
   border-right: 1px solid #F0F1F3;
 }
 
-.countDownContainer > div span:last-child {
+.countdownContainer > div span:last-child {
   border-left: 1px solid #F0F1F3;
 }
 
-.countDownContainer > span {
+.countdownContainer > span {
   font-size: 6.25rem;
   margin: 0.05rem;
 }
 
-.CountDownButton {
+.countdownButton {
   width: 100%;
   height: 5rem;
 
@@ -59,6 +59,22 @@
   transition: background-color 0.2s;
 }
 
-.CountDownButton:hover {
+.countdownButton:not(:disabled):hover {
   background: var(--blue-dark);
+}
+
+.countdownButtonActive {
+  background: var(--white);
+  color: var(--title);
+}
+
+.countdownButtonActive:not(:disabled):hover {
+  background: var(--red);
+  color: var(--white);
+}
+
+.countdownButton:disabled {
+  background: var(--white);
+  color: var(--text);
+  cursor: not-allowed;
 }
